--- a/src/authenticate/templates/authenticate/login.html
+++ b/src/authenticate/templates/authenticate/login.html
@@ -1,18 +1,21 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="login-register">
 <form method="post">
     {% csrf_token %}
-    <p>Connectez-vous</p>
+    <h2>Connectez-vous</h2>
     {{ form.as_p }}
     <button type="submit" value="login">Connexion</button>
 </form>
+</div>
 
-<div>Inscrivez-vous maintenant:</div>
+<div class="login-register">
+  <h2>Inscrivez-vous maintenant:</h2>
 
   <form action= {% url 'signup' %} >
     <button type="submit">S'inscrire</button>
  </form>
-
+</div>
 
 {% endblock %}
