--- a/src/authenticate/templates/authenticate/signup.html
+++ b/src/authenticate/templates/authenticate/signup.html
@@ -4,7 +4,7 @@
     <form method='post'>
         {% csrf_token %}
         {{ form.as_p }}
-        <button type='submit'>Créer le compte</button>
+        <button type='submit' value="signup">Créer le compte</button>
     <form/>
 
 {% endblock content %}
