non nullable field user

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -7,7 +7,7 @@
     <title>LITReview</title>
 </head>
 <body>
-    <h1 class='site-title'>Bienvenue sur LITReview</h1>
+    <h1 class='site-title'>Bienvenue {{user.username }} sur LITReview</h1>
     <h2 class='site-title'> Votre site de critique de livre</h2>
     {% block content %} {% endblock content%}
 </body>
