--- a/src/authenticate/templates/authenticate/login.html
+++ b/src/authenticate/templates/authenticate/login.html
@@ -1,11 +1,14 @@
 {% extends "base.html" %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
+
 <div class="login-register">
 <form method="post">
     {% csrf_token %}
     <h2>Connectez-vous</h2>
-    {{ form.as_p }}
+    {{ form|crispy }}
     <button type="submit" value="login">Connexion</button>
 </form>
 </div>
