--- a/src/authenticate/templates/authenticate/signup.html
+++ b/src/authenticate/templates/authenticate/signup.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
     <form method='post'>
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <button type='submit' value="signup">Créer le compte</button>
     <form/>
 
