--- a/src/blog/templates/blog/creat_ticket.html
+++ b/src/blog/templates/blog/creat_ticket.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
-
+{% load crispy_forms_tags %}
 
 {% block content %}
+    <h1>Créer un ticket</h1>
     <form method='post' class="creat-article"> 
-        {{ article.as_p }}
+        
+        {{ form|crispy }}
     </form>
-{% endblock content %}
+{% endblock %}
 
 
 
