--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>LITReview</title>
 </head>
 <body>
@@ -23,8 +24,8 @@
 
     <h1 class='site-title'>LITReview votre site de critiques de livre</h1>
     
-    
     {% endif %}
+
     {% block content %} {% endblock content%}
 </body>
 </html>
