--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -7,10 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>LITReview</title>
 </head>
-<body>
+<body class="container">
     {% if user.is_authenticated %}
-    <h1 class='site-title'>Bienvenue {{user.username }} sur LITReview</h1>
-    <h2 class='site-title'> Votre site de critiques de livre</h2>
+    <h1 class='site-title'>{{user.username }}, bienvenue sur LITReview</h1>
+    <h2 class='site-title'> Votre site de critiques de livres</h2>
     <nav>
         <li>
             <form method = 'post' action=" {% url 'logout' %} ">
@@ -22,7 +22,7 @@
     
     {% else %}
 
-    <h1 class='site-title'>LITReview votre site de critiques de livre</h1>
+    <h1 class='site-title'>LITReview votre site de critiques de livres</h1>
     
     {% endif %}
 
