--- a/src/authenticate/templates/authenticate/login.html
+++ b/src/authenticate/templates/authenticate/login.html
@@ -3,22 +3,27 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+<div class="container-fluid">
+  <div class="row">
 
-<div class="login-register">
-<form method="post">
-    {% csrf_token %}
-    <h2>Connectez-vous</h2>
-    {{ form|crispy }}
-    <button type="submit" value="login">Connexion</button>
-</form>
+    <div class="col-sm-6">
+      <h2 class="d-flex justify-content-center">Inscrivez-vous maintenant:</h2>
+      <form action= {% url 'signup' %} class="d-flex justify-content-center" >
+        <button class="btn btn-secondary" type="submit" >S'inscrire</button>
+      </form>
+    </div>
+
+    <div class="col-sm-6">
+      <h2 class="d-flex justify-content-center">Connectez-vous</h2>
+      <form method="post" >
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button class="btn btn-secondary text-right" type="submit" value="login" >Connexion</button>
+      </form>
+    </div>
+
+  </div>
 </div>
 
-<div class="login-register">
-  <h2>Inscrivez-vous maintenant:</h2>
-
-  <form action= {% url 'signup' %} >
-    <button type="submit">S'inscrire</button>
- </form>
-</div>
 
 {% endblock content%}
