--- a/src/authenticate/templates/authenticate/signup.html
+++ b/src/authenticate/templates/authenticate/signup.html
@@ -8,7 +8,7 @@
 <form method='post'>
     {% csrf_token %}
     {{ form|crispy }}
-    <div class="register__action-bloc">
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
         <button class="btn btn-secondary"> <a class="action-button text-white" href="{% url 'login' %}">Retourner</a></button>                       
         <button class="btn btn-secondary" type='submit' value="signup">Créer le compte</button>
     </div>
