--- a/src/blog/templates/blog/creat_ticket.html
+++ b/src/blog/templates/blog/creat_ticket.html
@@ -6,8 +6,9 @@
     <form method='post' class="creat-article"> 
         {% csrf_token %}
         {{ form|crispy }}
-        <button type='submit' value="home">Retourner</button>
-        <button type='submit' value="signup">Envoyer</button>
+    <div <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+        <button class="btn btn-secondary" type='submit' value="signup">Envoyer</button>
+    </div>
     </form>
 {% endblock %}
 
