--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>LITReview</title>
 </head>
-<body class="container">
+<body class="container p-5">
     {% if user.is_authenticated %}
     <h1 class='site-title'>{{user.username }}, bienvenue sur LITReview</h1>
     <h2 class='site-title'> Votre site de critiques de livres</h2>
