'image' attribute has no file associated with it

--- a/src/blog/templates/blog/creat_ticket.html
+++ b/src/blog/templates/blog/creat_ticket.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <h1>Créer un ticket</h1>
-    <form method='post' class="creat-article"> 
+    <form method='post' class="creat-article" enctype="multipart/form-data"> 
         {% csrf_token %}
         {{ form|crispy }}
     <div <div class="d-grid gap-2 d-md-flex justify-content-md-end">
