--- a/src/blog/templates/blog/posts.html
+++ b/src/blog/templates/blog/posts.html
@@ -2,19 +2,30 @@
 
 {% block content %}
 {% for post in posts %}
+
     <div>
         <h3>
             {{post.title}}
         </h3>
-    <p>
-        {{post.description}}
-    </p>
-    <p>
-        {{post.time_created}}
-    </p>
-    <p>
-        <img src = '{{post.image.url}}'>
-    </p>
+        <p>Post crée par {{post.user}}</p>
+        <div class="container-fluid">
+            <div class="row">  
+                <div class="col-sm-6">
+                    <p>
+                        {{post.description}}
+                    </p>
+                </div>
+                <div class="col-sm-6">
+                    {% if post.image %}
+                        <p>
+                            <img src = '{{post.image.url}}'>
+                        </p>
+                    {% endif %}
+                </div>           
+                <p>
+                    {{post.time_created}}
+                </p>
+        </div>
     </div>
 {% endfor %}
 {% endblock content %}
