change signup form

--- a/litreview/authenticate/templates/authenticate/signup.html
+++ b/litreview/authenticate/templates/authenticate/signup.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-
+<div class='container'>
 <form method='post'>
     {% csrf_token %}
     {{ form|crispy }}
@@ -13,5 +13,6 @@
         <button class="btn btn-secondary" type='submit' value="signup">Créer le compte</button>
     </div>
 <form/>
+</div>
 
 {% endblock content %}
