home page + button creat ask ok

--- a/litreview/blog/templates/blog/home.html
+++ b/litreview/blog/templates/blog/home.html
@@ -1,2 +1,11 @@
 {% extends 'base.html' %}
 
+
+{% block content %} 
+
+{% include 'blog/review-buttons.html' %}
+
+{% include 'blog/posts.html' %}
+
+{% endblock content %} 
+
