--- a/litreview/blog/templates/blog/posts.html
+++ b/litreview/blog/templates/blog/posts.html
@@ -1,32 +1,44 @@
-{% extends "base.html" %}
+
 
 {% block content %}
 {% for post in posts %}
 
-    <div>
-        <h3>
-            {{post.title}}
-        </h3>
-        <p>Post crée par {{post.user}}</p>
+    <div class='container p-3 my-3 border'>
+        
         <div class="container-fluid">
             <div class="row">  
     
                 <div class="col-sm-6">
-                    <p>
-                        {{post.description}}
-                    </p>
+                    <p>Ticket - {{post.user}}</p>
                 </div>
+                <div class="col-sm-6 " style="text-align:right">
+                    <p> {{post.time_created}} </p>
+                </div>
+            </div>
+        </div>
+
+        <h3>
+            {{post.title}}
+        </h3>
+
+        <div class="container-fluid p-3 my-3">
+            <div class="row">  
+    
+            
                 <div class="col-sm-6">
                     {% if post.image %}
-                        <p>
-                            <img src = '{{post.image.url}}'>
-                        </p>
+                        <div class='d-flex justify-content-center'>
+                            <img src = '{{post.image.url}}' >
+                        </div>
                     {% endif %}
                 </div>  
+
+                <div class="col-sm-6">
+                    <div>
+                        {{post.description}}
+                    </div>
+                </div>
         
-                <p>
-                    {{post.time_created}}
-                </p>
         </div>
     </div>
 {% endfor %}
