--- a/litreview/authenticate/templates/authenticate/signup.html
+++ b/litreview/authenticate/templates/authenticate/signup.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<div class='container'>
+<div class='container p-3 my-3'>
 <form method='post'>
     {% csrf_token %}
     {{ form|crispy }}
