--- a/litreview/blog/templates/blog/posts.html
+++ b/litreview/blog/templates/blog/posts.html
@@ -38,7 +38,7 @@
                         {{post.description}}
                     </div>
                 </div>
-        
+            </div>
         </div>
     </div>
 {% endfor %}
