--- a/litreview/templates/navbar.html
+++ b/litreview/templates/navbar.html
@@ -11,10 +11,11 @@
             </ul>
 
             <ul class="navbar-nav ms-auto">
-
+            
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Flux</a>
+                    <a class="nav-link" href="{% url 'home'%}">Flux</a>
                 </li>
+                
 
                 <li class="nav-item">
                     <a class="nav-link" href="#">Posts</a>
