--- a/litreview/blog/templates/blog/review-buttons.html
+++ b/litreview/blog/templates/blog/review-buttons.html
@@ -1,11 +1,10 @@
 
-
 {% block content %}
 <div class="container-fluid p-3 my-3 border">
     <div class="row">  
 
         <div class="col-sm-6">    
-            <form action= "" class="d-flex justify-content-center" >
+            <form  action= {% url "creat-ticket" %} class="d-flex justify-content-center" >
                 <button class="btn btn-secondary" type="submit" >Demander une critique</button>
             </form>
                 
