--- a/litreview/blog/templates/blog/posts.html
+++ b/litreview/blog/templates/blog/posts.html
@@ -2,9 +2,7 @@
 
 {% block content %}
 {% for post in posts %}
-
     <div class='container p-3 my-3 border'>
-        
         <div class="container-fluid">
             <div class="row">  
     
@@ -23,21 +21,24 @@
 
         <div class="container-fluid p-3 my-3">
             <div class="row">  
-    
-            
                 <div class="col-sm-6">
                     {% if post.image %}
                         <div class='d-flex justify-content-center'>
                             <img src = '{{post.image.url}}' >
                         </div>
+                    {% else %}
+                    <div class='d-flex justify-content-center'>
+                        <img src = 'media/image/no-photo-icon-free-image.jpg' >
+                    </div>
+
                     {% endif %}
                 </div>  
-
                 <div class="col-sm-6">
                     <div>
                         {{post.description}}
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
