--- a/litreview/blog/templates/blog/home.html
+++ b/litreview/blog/templates/blog/home.html
@@ -5,7 +5,7 @@
 
 {% include 'blog/review-buttons.html' %}
 
-{% include 'blog/posts.html' %}
+{% include 'blog/flux.html' %}
 
 {% endblock content %} 
 
