--- a/litreview/blog/templates/blog/creat-review.html
+++ b/litreview/blog/templates/blog/creat-review.html
@@ -3,21 +3,29 @@
 
 
 {% block content %}
+
+<div class='container-fluid p-5 my-5 border'>
+{{ review_form.user }}
+</div>
+
+
+
+
 <div class='container-fluid p-5 my-5 border'>
     <h2>Critique</h2>
     <form method='post'> 
         {% csrf_token %}
 
         <div class="p-2">         
-            {{ form.headline|as_crispy_field }}
+            {{ review_form.headline|as_crispy_field }}
         </div>            
 
-        <div class="p-2">
-            {% include 'blog/radio-rating.html' %} 
-        </div>            
+        {% include 'blog/radio-rating.html' %} 
+
+        
         
         <div class="p-2">
-            {{form.body|as_crispy_field}}
+            {{review_form.body|as_crispy_field}}
         </div>            
         <div class="d-md-flex justify-content-md-end">
             <button class="btn btn-secondary" type='submit' value="signup">Envoyer</button>
