--- a/litreview/blog/templates/blog/creat_ticket.html
+++ b/litreview/blog/templates/blog/creat_ticket.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="container-fluid p-5">
     <h3 class="text-center p-3 my-3">Créer un ticket</h3>
     <form method='post' class="creat-article" enctype="multipart/form-data"> 
         {% csrf_token %}
@@ -13,6 +13,7 @@
     </form>
 </div>
 {% endblock %}
+
 
 
 
