--- a/litreview/blog/templates/blog/radio-rating.html
+++ b/litreview/blog/templates/blog/radio-rating.html
@@ -1,30 +1,13 @@
 
-<div class= "border">
-    <p3>Note</p>
-    <div class = "d-flex justify-content-center">
-        <div class="form-check form-check-inline p-5">
-        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio0" value="option0">
-            <label class="form-check-label" for="inlineRadio0">0</label>
+<div class='container-fluid'>
+    
+    <p> {{ review_form.rating.label}}</p>
+
+        <div class= "d-flex justify-content-center">
+            <ul class="list-inline ">
+                {% for radiob in review_form.rating  %}
+                        <li class="list-inline-item me-5"> {{radiob}}</li>
+                {% endfor %}
+            </ul>
         </div>
-        <div class="form-check form-check-inline p-5">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-            <label class="form-check-label" for="inlineRadio1">1</label>
-        </div>
-        <div class="form-check form-check-inline p-5">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-            <label class="form-check-label" for="inlineRadio2">2</label>
-        </div>
-        <div class="form-check form-check-inline p-5">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
-            <label class="form-check-label" for="inlineRadio3">3</label>
-        </div>
-        <div class="form-check form-check-inline p-5">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
-            <label class="form-check-label" for="inlineRadio4">4</label>
-        </div>
-        <div class="form-check form-check-inline p-5">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option5">
-            <label class="form-check-label" for="inlineRadio5">5</label>
-        </div>   
-    </div>
 </div>
