--- a/litreview/blog/templates/blog/flux.html
+++ b/litreview/blog/templates/blog/flux.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="p-1 my-1">
-            <form action= "{% url 'creat-review' post.id %} " class="d-flex justify-content-end" >
+            <form action= "{% url 'review-add' post.id %} " class="d-flex justify-content-end" >
                 <button class="btn btn-secondary" type="submit" >Créer une critique</button>
             </form>
         </div>
