--- a/litreview/blog/templates/blog/home.html
+++ b/litreview/blog/templates/blog/home.html
@@ -3,7 +3,7 @@
 
 {% block content %} 
 
-{% include 'blog/review-buttons.html' %}
+{% include 'blog/top-review-buttons.html' %}
 
 {% include 'blog/flux.html' %}
 
