--- a/litreview/blog/templates/blog/top-review-buttons.html
+++ b/litreview/blog/templates/blog/top-review-buttons.html
@@ -1,5 +1,5 @@
 
-{% block content %}
+
 <div class="container-fluid p-3 my-3 border">
     <div class="row">  
 
@@ -7,14 +7,12 @@
             <form  action= {% url "creat-ticket" %} class="d-flex justify-content-center" >
                 <button class="btn btn-secondary" type="submit" >Demander une critique</button>
             </form>
-                
-            
         </div>
+
         <div class="col-sm-6">
-            <form action= "" class="d-flex justify-content-center" >
+            <form action= "{% url "create-ticket-and-review" %}" class="d-flex justify-content-center" >
                 <button class="btn btn-secondary" type="submit" >Créer une critique</button>
             </form>
         </div>
     </div>
 </div>
-{% endblock content %}
