--- a/litreview/blog/templates/blog/creat_ticket.html
+++ b/litreview/blog/templates/blog/creat_ticket.html
@@ -6,13 +6,13 @@
     <h3 class="text-center p-3 my-3">Créer un ticket</h3>
     <form method='post' class="creat-article" enctype="multipart/form-data"> 
         {% csrf_token %}
-        {{ form|crispy }}
+        {{ ticket_form|crispy }}
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
             <button class="btn btn-secondary" type='submit' value="signup">Envoyer</button>
         </div>
     </form>
 </div>
-{% endblock %}
+{% endblock content%}
 
 
 
