feed with review ok | delete ticket button if review not ok

--- a/litreview/blog/templates/blog/home.html
+++ b/litreview/blog/templates/blog/home.html
@@ -5,7 +5,9 @@
 
 {% include 'blog/top-review-buttons.html' %}
 
-{% include 'blog/flux.html' %}
+{% include 'blog/review-flux.html' %}
+{% include 'blog/ticket-flux.html' %}
+
 
 {% endblock content %} 
 
