feed filter in progress

--- a/litreview/blog/templates/blog/home.html
+++ b/litreview/blog/templates/blog/home.html
@@ -5,8 +5,8 @@
 
 {% include 'blog/top-review-buttons.html' %}
 
-{% include 'blog/review-flux.html' %}
-{% include 'blog/ticket-flux.html' %}
+{% include 'blog/test.html' %}
+
 
 
 {% endblock content %} 
