--- a/litreview/blog/templates/blog/review-flux.html
+++ b/litreview/blog/templates/blog/review-flux.html
@@ -1,6 +1,3 @@
-
-{% for review in reviews %}
-
 <div class='container p-3 my-3 border'>
     <div class="container-fluid">
         <div class="row">  
@@ -9,23 +6,23 @@
                 <p>Vous avez publié une critique: </p>
             </div>
             <div class="col-sm-6 " style="text-align:right">
-                <p> - {{review.time_created}} </p>
+                <p> {{post.time_created}} </p>
             </div>
         </div>
     </div>
     <h3>
-        {{review.headline}} {{review.rating}}
+        {{post.headline}} {{post.rating}}
     </h3>
     <div>
-        {{review.body}}
+        {{post.body}}
     </div>
 
     <div class="container-fluid p-3 my-3 border">
         <div class="row">  
             <div class="col-sm-6">
-                {% if review.ticket.image %}
+                {% if post.ticket.image %}
                     <div class='d-flex justify-content-center'>
-                        <img src = '{{review.ticket.image.url}}' >
+                        <img src = '{{post.ticket.image.url}}' >
                     </div>
                 {% else %}
                 <div class='d-flex justify-content-center'>
@@ -36,26 +33,10 @@
             </div>  
             <div class="col-sm-6">
                 <div>
-                    {{review.ticket.description}}
+                    {{post.ticket.description}}
                 </div>
             </div>
 
         </div>
-    </div>            
-    {% if not review.ticket %}
-    <div class="p-1 my-1">
-        <form action= " " class="d-flex justify-content-end" >
-            <button class="btn btn-secondary" type="submit" >Créer une critique</button>
-        </form>
-    </div>
-    {% endif %}
+    </div>                
 </div>
-
-
-{% endfor %}
-
-
-
-
-
-
