--- a/litreview/blog/templates/blog/review-flux.html
+++ b/litreview/blog/templates/blog/review-flux.html
@@ -1,3 +1,4 @@
+{% load static %}
 <div class='container p-3 my-3 border'>
     <div class="container-fluid">
         <div class="row">  
@@ -11,12 +12,16 @@
         </div>
     </div>
     <h3>
-        {{post.headline}} {{post.rating}}
+        {{post.headline}} 
+        <div class="Stars" style="--rating: {{post.rating}}"; aria-label="Rating of this product is 2.3 out of 5.">
+    
     </h3>
+    
+    
     <div>
         {{post.body}}
     </div>
-
+    
     <div class="container-fluid p-3 my-3 border">
         <div class="row">  
             <div class="col-sm-6">
