--- a/litreview/templates/base.html
+++ b/litreview/templates/base.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>LITReview</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'blog/styles.css' %}" />
     {% include 'navbar.html' %}
 </head>
 
 <body class="container-fluid">
-    {% block content %} {% endblock content%}
+    {% block content %}
+    {% endblock content%}
 </body>
 </html>
 
