--- a/litreview/templates/navbar.html
+++ b/litreview/templates/navbar.html
@@ -18,7 +18,7 @@
                 
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Posts</a>
+                    <a class="nav-link" href="{% url 'my-posts' %}">Posts</a>
                 </li>
 
                 <li class="nav-item">
