--- a/litreview/blog/templates/blog/buttons-modify-delete.html
+++ b/litreview/blog/templates/blog/buttons-modify-delete.html
@@ -9,7 +9,29 @@
                 <button class="btn btn-secondary m-2" type="submit" >Modifier</button>
             </form>
             
-            <button onclick="document.getElementById('id01').style.display='block'" class="btn btn-secondary m-2"  >Supprimer</button>
+            <form action="{{post.id }}" method="post">
+              
+              <button method="post" onclick="document.getElementById('id01').style.display='block'" class="btn btn-secondary m-2">Supprimer</button>
+              </form>
+              {{post.id}}
+              <div id="id01" class="modal">
+                <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+                    <form class="modal-content">
+                    <div class="container-modal">
+                        <h1>Attention</h1>
+                        <p>Êtes-vous sûr de vouloir supprimer {{post.id}}?</p>
+                        
+                        <div class="clearfix">
+                            <button onclick="document.getElementById('id01').style.display='none'" type="button" class="cancelbtn modalbtn">Annuler</button>
+                            <form action="{% url 'delete' post.id %}" method="post">
+                                {% csrf_token %}
+                                <button class="deletebtn modalbtn" type="submit">Supprimer</button>
+                            </form>
+                        </div>
+                      </div>
+                    </form>
+              </div> 
+
             
         </div>
     </div>
@@ -17,17 +39,3 @@
 
 
 
-<div id="id01" class="modal">
-  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-  <form class="modal-content" action="/action_page.php">
-    <div class="container-modal">
-      <h1>Attention</h1>
-      <p>Êtes-vous sûr de vouloir supprimer ?</p>
-
-      <div class="clearfix">
-        <button onclick="document.getElementById('id01').style.display='none'" type="button" class="cancelbtn modalbtn">Annuler</button>
-        <button class="deletebtn modalbtn" type="submit">Supprimer</button>
-      </div>
-    </div>
-  </form>
-</div> 
