--- a/litreview/blog/templates/blog/buttons-top-review.html
+++ b/litreview/blog/templates/blog/buttons-top-review.html
@@ -4,7 +4,7 @@
     <div class="row">  
 
         <div class="col-sm-6">    
-            <form  action= {% url "creat-ticket" %} class="d-flex justify-content-center" >
+            <form  action= "{% url "creat-ticket" %}" class="d-flex justify-content-center" >
                 <button class="btn btn-secondary" type="submit" >Demander une critique</button>
             </form>
         </div>
