--- a/litreview/blog/templates/blog/buttons-modify-delete.html
+++ b/litreview/blog/templates/blog/buttons-modify-delete.html
@@ -2,40 +2,19 @@
 
 
 <div class="container">
-    <div class="row">       
+    <div class="row">
         <div class="p-3 me-5 d-flex justify-content-end ">
 
-            <form action= " " class="" >
-                <button class="btn btn-secondary m-2" type="submit" >Modifier</button>
+            <form action=" " class="">
+                <button class="btn btn-secondary m-2" type="submit">Modifier</button>
             </form>
-            
-            <form action="{{post.id }}" method="post">
-              
-              <button method="post" onclick="document.getElementById('id01').style.display='block'" class="btn btn-secondary m-2">Supprimer</button>
-              </form>
-              {{post.id}}
-              <div id="id01" class="modal">
-                <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-                    <form class="modal-content">
-                    <div class="container-modal">
-                        <h1>Attention</h1>
-                        <p>Êtes-vous sûr de vouloir supprimer {{post.id}}?</p>
-                        
-                        <div class="clearfix">
-                            <button onclick="document.getElementById('id01').style.display='none'" type="button" class="cancelbtn modalbtn">Annuler</button>
-                            <form action="{% url 'delete' post.id %}" method="post">
-                                {% csrf_token %}
-                                <button class="deletebtn modalbtn" type="submit">Supprimer</button>
-                            </form>
-                        </div>
-                      </div>
-                    </form>
-              </div> 
 
+                
+            <button onclick="document.getElementById('{{post.id}}').style.display='block'" class="btn btn-secondary m-2">Supprimer</button>
+            {% include 'blog/button-modal-delete.html' %}
             
+
+
         </div>
     </div>
 </div>
-
-
-
