--- a/litreview/blog/templates/blog/posts.html
+++ b/litreview/blog/templates/blog/posts.html
@@ -6,7 +6,7 @@
     {% if post.content_type == 'TICKET' %}
         
             {% if post.user_id == user.id %}
-            <div class='container p-3 my-3 border'>
+            <div id="id12"  class='container p-3 my-3 border'>
                 {% include 'blog/ticket-flux.html' %}
                 {% include 'blog/buttons-modify-delete.html' %}
             </div>
