reformat modal files - del ticket or review ok

--- a/litreview/blog/templates/blog/button-modal-delete.html
+++ b/litreview/blog/templates/blog/button-modal-delete.html
@@ -1,17 +1,21 @@
-
 <div id="{{post.id}}" class="modal">
     <span onclick="document.getElementById('{{post.id}}').style.display='none'" class="close"  title="Close Modal">&times;</span>
-    <form action="{% url 'delete' post.id %}" method="post" class="modal-content">
+    {% if post.content_type == 'TICKET' %}
+        <form action="{% url 'delete-ticket' post.id %}" method="post" class="modal-content">
+    
+    {% elif post.content_type == 'REVIEW' %}
+        <form action="{% url 'delete-review' post.id %}" method="post" class="modal-content">
+    {% endif %}
+    
         {% csrf_token %}
         <div class="container-modal">
             <h1>Attention</h1>
             <p>Êtes-vous sûr de vouloir supprimer :</p>
-            <p> ==> {{post.title}} ?</p>
-
+            <p>==> {{post.title}} ? </p>
+    
             <div class="clearfix">
                 <button onclick="document.getElementById('{{post.id}}').style.display='none'" type="button" class="cancelbtn modalbtn">Annuler</button>
                 <button class="deletebtn modalbtn" type="submit">Supprimer</button>
-
             </div>
         </div>
     </form>
