--- a/litreview/blog/templates/blog/ticket-flux.html
+++ b/litreview/blog/templates/blog/ticket-flux.html
@@ -18,7 +18,7 @@
             </div>
         {% else %}
             <div class='d-flex justify-content-center'>
-                <img src = 'media/image/no-photo-icon-free-image.jpg' >
+                <img src = 'media/image/no-image.jpg' >
             </div>
         {% endif %}
     </div>  
