--- a/litreview/blog/templates/blog/review-flux.html
+++ b/litreview/blog/templates/blog/review-flux.html
@@ -17,6 +17,7 @@
 </div>
 
 <div class="container-fluid p-3 my-3 border row">
+    <p> Ticket - {{post.ticket.user}}</p>
         <div class="col-sm-6">
             {% if post.ticket.image %}
                 <div class='d-flex justify-content-center'>
