--- a/litreview/blog/templates/blog/buttons-modify-delete.html
+++ b/litreview/blog/templates/blog/buttons-modify-delete.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="p-3 me-5 d-flex justify-content-end ">
 
-            <form action=" " class="">
+            <form action="{% url "modify" post.id%} " class="">
                 <button class="btn btn-secondary m-2" type="submit">Modifier</button>
             </form>
             
