--- a/litreview/templates/navbar.html
+++ b/litreview/templates/navbar.html
@@ -40,7 +40,7 @@
     <div class="container-fluid">
         <ul class="navbar-nav mx-auto justify-content-center">
             <li class="nav-item ">
-                <a class="nav-link" >LITReview {{user}}</a>
+                <a class="nav-link" >LITReview</a>
             </li>
         </ul>
     </div>
