--- a/litreview/blog/templates/blog/review-flux.html
+++ b/litreview/blog/templates/blog/review-flux.html
@@ -21,11 +21,11 @@
         <div class="col-sm-6">
             {% if post.ticket.image %}
                 <div class='d-flex justify-content-center'>
-                    <img src = '{{post.ticket.image.url}}' >
+                    <img src = '{{post.ticket.image.url}}' width="190" height="270" >
                 </div>
             {% else %}
             <div class='d-flex justify-content-center'>
-                <img src = 'media/image/no-image.jpg' >
+                <img src = '/media/image/no-image.jpg' width="190" height="270" >
             </div>
 
             {% endif %}
