--- a/litreview/blog/templates/blog/subscription.html
+++ b/litreview/blog/templates/blog/subscription.html
@@ -1,36 +1,36 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
+
+
+
 {% block content %}
-
-
-<div class="container-fluid p-5">
+<div class="container-fluid">    
     <h3 class="text-center p-3 my-3">Suivre d'autres utilisateurs</h3>
-    
-    <form method='POST' action = {% url 'subscribe' %}>
-        {% csrf_token %}
-        <div class="input-group mb-3">
-            <input name="search" type="text" class="form-control" placeholder="Recherche d'un utilisateur par nom" aria-describedby="button-addon2" >
-            <button type= 'submit' class="btn btn-outline-secondary"  id="button-addon2">Envoyer</button>
+    <form method='POST' action = {% url 'subscriber' %} >
+        <div class="row">
+        <div class="col-lg-10">
+                {% csrf_token %}
+                    <div class="input-group mb-3 ">
+                        <input name="search" list='exist' type="text" class="form-control" placeholder="Recherche d'un utilisateur par nom" aria-describedby="button-addon2" >
+                            <datalist id = 'exist' >
+                                {% for usr in exist %}
+                                <option value='{{usr}}'> </option>
+                                {% endfor %}
+                        <datalist>                    
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <button type= 'submit' class="btn btn-outline-secondary"  id="button-addon2">Envoyer</button> 
+                    </div>
+            </div>
         </div>
     </form>
-    {% if search %}
-    {% for username in exist  %}
-    <p> utilisateur pouvant correspondre : {{username}}<p/>
-    {% endfor %}
-    {% else %}
-    <p>Aucun utilisateur ne correspond à la recherche </p>
-    {% endif %}
-    
-    <h3 class="text-center p-3 my-3">Abonnements</h3>
-    <div class="input-group mb-3">
-        
-    </div>
 
-    <h3 class="text-center p-3 my-3">Abonnés</h3>
-    <div class="input-group mb-3">
-        
-    </div>
+    {% include 'blog/display-subscribers.html' %}
 
-
-</div>
 {% endblock content %}
+
+
+
+
+
