--- a/litreview/templates/base.html
+++ b/litreview/templates/base.html
@@ -8,6 +8,7 @@
     <title>LITReview</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'blog/styles.css' %}" />
+    {{user.username}}
     {% include 'navbar.html' %}
 </head>
 
