autocomplete ok GET request OK subs' and unsubs' to do

--- a/litreview/blog/templates/blog/display-subscribers.html
+++ b/litreview/blog/templates/blog/display-subscribers.html
@@ -1,13 +1,20 @@
 <h3 class="text-center p-3 my-3">Abonnements</h3>
-{% for usr  in following%}
-    <div class="mb-3">
-        <p>{{usr.followed_user}}</p>
-    </div>
-{% endfor %}
+<div class='container-fluid row '>    
+{% for usr  in following %}
+    <div class="alert alert-info col-lg-10 text-center">
+        {{usr.followed_user}}
+    </div>    
+    {% include 'blog/unsubscribe.html' %}
+    
 
-<h3 class="text-center p-3 my-3">Abonnés</h3>
-{% for username in followed_by %}
-    <div class="mb-3">
-        <p>{{username}}</p>
-    </div>
+    {% endfor %}
+    
+    <h3 class="text-center p-3 my-3">Abonnés</h3>
+    {% for username in followed_by %}
+    <div class="alert alert-primary  col-lg-10 text-center">
+        {{username}}
+    </div>        
+    
+</div>
+
 {% endfor %}
